# learn-cmake-together

./: .gitignore  README.md
01-hello-cmake/: CMakeLists.txt  hello-world.cpp
02-generators/: CMakeLists.txt
03-common_arguments/03-if_argument/: Message.cpp  Message.hpp
03-common_arguments/03-user_prompt/: hello-world.cpp
03-common_arguments/04-foreach_argument/: CMakeLists.txt
03-common_arguments/05-set_argument/: CMakeLists.txt
03-file_process/file-archieve/create/: CMakeLists.txt
03-file_process/file-archieve/extract/: txts.tar
03-file_process/file-reading/: CMakeLists.txt  test.txt
03-file_process/file-writing/: template.txt
03-if_argument/: CMakeLists.txt
03-user_prompt/: CMakeLists.txt
04-cmake_exp/: CMakeLists.txt  cmake_exp.cpp
04-foreach_argument/: CMakeLists.txt
05-debug_release_settings/: CMakeLists2.txt
05-debug_release_settings/include/: dlib.h
05-debug_release_settings/src/: main.cpp
05-dynamic_static/dynamic/: CMakeLists.txt  log.cpp  log.h
05-dynamic_static/static/: CMakeLists.txt
05-dynamic_static/static_dynamic/: CMakeLists.txt
05-dynamic_static/static_dynamic/test_xlog/: CMakeLists.txt
05-dynamic_static/static_dynamic/xlog/: CMakeLists.txt  xlog.h
05-set_argument/: CMakeLists.txt
06-auto_add_cpp_hpp/include/: xthread.hpp
06-auto_add_cpp_hpp/src/: xlog.cpp  xtest.cpp  xthread.cc
06-file_process/file-archieve/extract/: CMakeLists.txt
06-file_process/file-lock/: CMakeLists.txt
06-file_process/file-path/: CMakeLists.txt
06-file_process/file-reading/: main.cpp
06-file_process/file-transfer/: CMakeLists.txt
06-file_process/file-writing/: CMakeLists.txt  generate.txt  output.txt
06-file_process/filesystem/: CMakeLists.txt
06-program_structure/add_subdirectory/: CMakeLists.txt  main.cpp
06-program_structure/add_subdirectory/log/: CMakeLists.txt  log.cpp  log.h
06-program_structure/add_subdirectory/utils/: CMakeLists.txt  utils.cpp  utils.h
06-program_structure/add_subdirectory2/: CMakeLists.txt
06-program_structure/add_subdirectory2/test_xlog/: test_xlog.cpp
06-program_structure/cmake_out_directory/: CMakeLists.txt
06-program_structure/cmake_out_directory/xlog/: xlog.cpp
07-export_find/507find_package/: CMakeLists.txt  main.cpp
07-export_find/508export_my_package_version/: CMakeLists.txt  slib.cpp.in
09-cmake_install/cmake_install/: CMakeLists.txt  dlib.cpp  main.cpp
09-cmake_install/cmake_install/include/: slib.h  slib_pri.h
09-cmake_install/install_dir/: CMakeLists.txt
09-cmake_install/install_file/: CMakeLists.txt
10-cmake_test/gtest_fetch/: CMakeLists.txt
10-cmake_test/gtest_tar_build_install/: CMakeLists.txt
12-cmake_pack/: README.md
ref_course/101hello_cmake/: CMakeLists.txt
ref_course/102cmake_lib/xlog/: xlog.cpp
ref_course/103message/: CMakeLists.txt  test_message.cpp
ref_course/104test_ver/: CMakeLists.txt
ref_course/105message_color/: CMakeLists.txt
ref_course/106cmake_system_ver/: CMakeLists.txt
ref_course/107cmake_include/: CMakeLists.txt
ref_course/107cmake_include/cmake/: test_cmake.cmake
ref_course/108auto_src_h/: CMakeLists.txt  main.cpp
ref_course/108auto_src_h/include/: xlog.h
ref_course/109cmake_out/xlog/: xlog.h
ref_course/110add_subdirectory/xlog/: CMakeLists.txt  xlog.cpp  xlog.h
ref_course/202cmake_cache/: CMakeLists.txt
ref_course/202cmake_cache/sub1/: CMakeLists.txt
ref_course/202cmake_cache/sub2/: CMakeLists.txt
ref_course/401cmake_target_include/: CMakeLists.txt  a.cpp  b.cpp  main.cpp
ref_course/402target_compile_features/: CMakeLists.txt  main.cpp
ref_course/403cmake_object/: CMakeLists.txt  a.cpp  b.cpp  main.cpp
ref_course/404cmake_version/: CMakeLists.txt
ref_course/405cmake_debug_release/: CMakeLists.txt
ref_course/405cmake_debug_release/src/: dlib.cpp  slib.cpp
ref_course/501cmake_install/: slib.cpp
ref_course/501cmake_install/include/: dlib.h
ref_course/504cmake_install_code/: CMakeLists.txt  install_log.txt
ref_course/505cmake_component/: CMakeLists.txt
ref_course/506export_my_package/: CMakeLists.txt  slib.cpp
ref_course/508export_my_package_version/: slib.cpp
ref_course/509find_package_version/: CMakeLists.txt
ref_course/701test_ctest/: CMakeLists.txt  test_ctest.cpp
ref_course/703gtest_tar_build_install/: gtest_tar_build_install.cpp
snippets/check_variable/: CMakeLists.txt
vs_features/406cmake_vs_multithreaded/: CMakeLists.txt  main.cpp  slib.cpp
vs_features/407cmake_vs_group/: CMakeLists.txt
